# open62541-test

./: CMakeLists.txt  README.md  open62541-notes.txt  simple-server.xml
src/: adc.c  adc.h  i2c.c  i2c.h  logger.c  logger.h  main.c  namespace_init.c  namespace_init.h  server.c  server.h  temperature.c  temperature.h
